Fixes various minor issues
- The logo flips around weirdly when animating in due to a taller body height than anticipated; so the perspective was moved into the title
- the page was overflowing on the right on narrow screens because
milestones label had nowrap for some reason
- the milestones section looked like it had too much padding on narrow
screens so that was reduced
- the decorative ring on was missing the ring bit on wip and
future milestones
- all milestones after and including the 10th now animate in at an
appropriate time

--- a/index.css
+++ b/index.css
@@ -6,7 +6,6 @@ body {
     background-repeat: no-repeat;
     min-height: 100vh;
     margin: 0;
-    perspective: 300px;
 }
 
 .a11y-only {
@@ -23,6 +22,7 @@ body {
     flex-direction: column;
     height: 70vh;
     max-height: 500px;
+    perspective: 300px;
 }
 
 #logo {
@@ -75,7 +75,7 @@ body {
 
 @keyframes other-in {
     0% {
-        transform: translateY(20px) rotateX(-2deg);
+        transform: translateY(20px);
         opacity: 0;
     }
 }
@@ -107,6 +107,15 @@ body {
     border-left: 1px solid rgba(0, 0, 0, 0.5);
 }
 
+@media (max-width: 400px) {
+    #milestones {
+        padding-left: 2em;
+    }
+    #milestones::before {
+        left: 2em;
+    }
+}
+
 #description, #milestones::before, .milestone {
     animation: other-in 1s cubic-bezier(0.1, 0.3, 0, 1) 1s backwards;
 }
@@ -128,7 +137,6 @@ body {
     margin-left: 7px;
     padding-left: 3px;
     padding-right: 3px;
-    white-space: nowrap;
 }
 .milestone-label.milestone-wip {
     border-bottom-color: #C16F1F;
@@ -147,12 +155,10 @@ body {
     background: #31a64f;
     border-radius: 50%;
 }
-.milestone-label.milestone-wip::before,
-.milestone-label.milestone-wip::after {
+.milestone-label.milestone-wip::before {
     background: #C16F1F;
 }
-.milestone-label.milestone-future::before,
-.milestone-label.milestone-future::after {
+.milestone-label.milestone-future::before {
     background: #D15992;
 }
 .milestone-label::after {
@@ -174,6 +180,8 @@ body {
     padding-left: 10px;
 }
 
+.milestone { animation-delay: 1.65s; }
+.milestone:nth-child(1) { animation-delay: 1.2s; }
 .milestone:nth-child(2) { animation-delay: 1.25s; }
 .milestone:nth-child(3) { animation-delay: 1.3s; }
 .milestone:nth-child(4) { animation-delay: 1.35s; }
